# CNN-model-for-molecular-detection

./: .gitignore  README.md  classical_hot_core_spectrum.npy  mask.npy  model_score_calibration.py  pred_AVG.py  pred_MC_dropout.py  pyproject.toml
net_save/: error.txt
